Hopefully fix the menu scrollbar on live

--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -16,6 +16,7 @@
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --ifm-table-cell-padding: 0.35rem;
+  --ifm-scrollbar-thumb-background-color: black;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -30,6 +31,7 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
   --ifm-menu-color-active: #a1ecfb;
   --ifm-breadcrumb-color-active: #a1ecfb;
+  --ifm-scrollbar-thumb-background-color: black;
 }
 
 @font-face {
@@ -186,6 +188,15 @@ button {
   border-style: solid;
   border-width: 1px;
   background: black;
+}
+
+.thin-scrollbar::-webkit-scrollbar {
+  border-color: rgb(2, 157, 187);
+  border-style: solid;
+  border-width: 1px;
+  background: black;
+  border-radius: 0px;
+  scrollbar-color: black;
 }
 
 .thin-scrollbar::-webkit-scrollbar-thumb {
